# databases/redis-starter/src/routes.ts
@@ -1,313 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-import {
-  Controller,
-  ValidationService,
-  FieldErrors,
-  ValidateError,
-  TsoaRoute,
-  HttpStatusCodeLiteral,
-  TsoaResponse,
-  fetchMiddlewares,
-} from '@tsoa/runtime';
-// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-import { RedisController } from './router/cache/cache.controller';
-// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-import { HealthController } from './router/health/health.controller';
-import type { RequestHandler } from 'express';
-import * as express from 'express';
-
-// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-const models: TsoaRoute.Models = {
-  CacheResponse: {
-    dataType: 'refAlias',
-    type: {
-      dataType: 'nestedObjectLiteral',
-      nestedProperties: {
-        value: { dataType: 'string', required: true },
-        key: { dataType: 'string', required: true },
-      },
-      validators: {},
-    },
-  },
-  // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-};
-const validationService = new ValidationService(models);
-
-// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-export function RegisterRoutes(app: express.Router) {
-  // ###########################################################################################################
-  //  NOTE: If you do not see routes for all of your controllers in this file, then you might not have informed tsoa of where to look
-  //      Please look into the "controllerPathGlobs" config option described in the readme: https://github.com/lukeautry/tsoa
-  // ###########################################################################################################
-  app.post(
-    '/cache/get',
-    ...fetchMiddlewares<RequestHandler>(RedisController),
-    ...fetchMiddlewares<RequestHandler>(RedisController.prototype.getCache),
-
-    function RedisController_getCache(request: any, response: any, next: any) {
-      const args = {
-        undefined: {
-          in: 'body',
-          required: true,
-          dataType: 'nestedObjectLiteral',
-          nestedProperties: { key: { dataType: 'string', required: true } },
-        },
-      };
-
-      // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-      let validatedArgs: any[] = [];
-      try {
-        validatedArgs = getValidatedArgs(args, request, response);
-
-        const controller = new RedisController();
-
-        const promise = controller.getCache.apply(
-          controller,
-          validatedArgs as any
-        );
-        promiseHandler(controller, promise, response, undefined, next);
-      } catch (err) {
-        return next(err);
-      }
-    }
-  );
-  // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-  app.post(
-    '/cache/set',
-    ...fetchMiddlewares<RequestHandler>(RedisController),
-    ...fetchMiddlewares<RequestHandler>(RedisController.prototype.setCache),
-
-    function RedisController_setCache(request: any, response: any, next: any) {
-      const args = {
-        undefined: {
-          in: 'body',
-          required: true,
-          dataType: 'nestedObjectLiteral',
-          nestedProperties: {
-            value: { dataType: 'string', required: true },
-            key: { dataType: 'string', required: true },
-          },
-        },
-      };
-
-      // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-      let validatedArgs: any[] = [];
-      try {
-        validatedArgs = getValidatedArgs(args, request, response);
-
-        const controller = new RedisController();
-
-        const promise = controller.setCache.apply(
-          controller,
-          validatedArgs as any
-        );
-        promiseHandler(controller, promise, response, undefined, next);
-      } catch (err) {
-        return next(err);
-      }
-    }
-  );
-  // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-  app.get(
-    '/health',
-    ...fetchMiddlewares<RequestHandler>(HealthController),
-    ...fetchMiddlewares<RequestHandler>(HealthController.prototype.get),
-
-    function HealthController_get(request: any, response: any, next: any) {
-      const args = {};
-
-      // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-      let validatedArgs: any[] = [];
-      try {
-        validatedArgs = getValidatedArgs(args, request, response);
-
-        const controller = new HealthController();
-
-        const promise = controller.get.apply(controller, validatedArgs as any);
-        promiseHandler(controller, promise, response, undefined, next);
-      } catch (err) {
-        return next(err);
-      }
-    }
-  );
-  // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-  // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-  // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-  function isController(object: any): object is Controller {
-    return (
-      'getHeaders' in object && 'getStatus' in object && 'setStatus' in object
-    );
-  }
-
-  function promiseHandler(
-    controllerObj: any,
-    promise: any,
-    response: any,
-    successStatus: any,
-    next: any
-  ) {
-    return Promise.resolve(promise)
-      .then((data: any) => {
-        let statusCode = successStatus;
-        let headers;
-        if (isController(controllerObj)) {
-          headers = controllerObj.getHeaders();
-          statusCode = controllerObj.getStatus() || statusCode;
-        }
-
-        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-        returnHandler(response, statusCode, data, headers);
-      })
-      .catch((error: any) => next(error));
-  }
-
-  // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-  function returnHandler(
-    response: any,
-    statusCode?: number,
-    data?: any,
-    headers: any = {}
-  ) {
-    if (response.headersSent) {
-      return;
-    }
-    Object.keys(headers).forEach((name: string) => {
-      response.set(name, headers[name]);
-    });
-    if (
-      data &&
-      typeof data.pipe === 'function' &&
-      data.readable &&
-      typeof data._read === 'function'
-    ) {
-      data.pipe(response);
-    } else if (data !== null && data !== undefined) {
-      response.status(statusCode || 200).json(data);
-    } else {
-      response.status(statusCode || 204).end();
-    }
-  }
-
-  // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-  function responder(
-    response: any
-  ): TsoaResponse<HttpStatusCodeLiteral, unknown> {
-    return function (status, data, headers) {
-      returnHandler(response, status, data, headers);
-    };
-  }
-
-  // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-  function getValidatedArgs(args: any, request: any, response: any): any[] {
-    const fieldErrors: FieldErrors = {};
-    const values = Object.keys(args).map((key) => {
-      const name = args[key].name;
-      switch (args[key].in) {
-        case 'request':
-          return request;
-        case 'query':
-          return validationService.ValidateParam(
-            args[key],
-            request.query[name],
-            name,
-            fieldErrors,
-            undefined,
-            { noImplicitAdditionalProperties: 'throw-on-extras' }
-          );
-        case 'path':
-          return validationService.ValidateParam(
-            args[key],
-            request.params[name],
-            name,
-            fieldErrors,
-            undefined,
-            { noImplicitAdditionalProperties: 'throw-on-extras' }
-          );
-        case 'header':
-          return validationService.ValidateParam(
-            args[key],
-            request.header(name),
-            name,
-            fieldErrors,
-            undefined,
-            { noImplicitAdditionalProperties: 'throw-on-extras' }
-          );
-        case 'body':
-          return validationService.ValidateParam(
-            args[key],
-            request.body,
-            name,
-            fieldErrors,
-            undefined,
-            { noImplicitAdditionalProperties: 'throw-on-extras' }
-          );
-        case 'body-prop':
-          return validationService.ValidateParam(
-            args[key],
-            request.body[name],
-            name,
-            fieldErrors,
-            'body.',
-            { noImplicitAdditionalProperties: 'throw-on-extras' }
-          );
-        case 'formData':
-          if (args[key].dataType === 'file') {
-            return validationService.ValidateParam(
-              args[key],
-              request.file,
-              name,
-              fieldErrors,
-              undefined,
-              { noImplicitAdditionalProperties: 'throw-on-extras' }
-            );
-          } else if (
-            args[key].dataType === 'array' &&
-            args[key].array.dataType === 'file'
-          ) {
-            return validationService.ValidateParam(
-              args[key],
-              request.files,
-              name,
-              fieldErrors,
-              undefined,
-              { noImplicitAdditionalProperties: 'throw-on-extras' }
-            );
-          } else {
-            return validationService.ValidateParam(
-              args[key],
-              request.body[name],
-              name,
-              fieldErrors,
-              undefined,
-              { noImplicitAdditionalProperties: 'throw-on-extras' }
-            );
-          }
-        case 'res':
-          return responder(response);
-      }
-    });
-
-    if (Object.keys(fieldErrors).length > 0) {
-      throw new ValidateError(fieldErrors, '');
-    }
-    return values;
-  }
-
-  // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-}
-
-// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
